configurações da aula 2 e exercício de estilização do header

--- a/src/templates/01 - HTML Templates/andre-aragao-login.html
+++ b/src/templates/01 - HTML Templates/andre-aragao-login.html
@@ -5,16 +5,16 @@
 <head>
     <vtex.cmc:seoHead />
     <vtex:metaTags />
-    <vtex:template id="{{loja}}-styles" />
+    <vtex:template id="andre-aragao-styles" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
 
 <body>
 
-    <!-- Chamada do cabeçalho da {{loja}} -->
+    <!-- Chamada do cabeçalho da andre-aragao -->
 
-    <vtex:template id="{{loja}}-header" />
+    <vtex:template id="andre-aragao-header" />
 
     <main>
 
@@ -26,11 +26,11 @@
 
     <!-- Chamada para o rodapé -->
 
-    <vtex:template id="{{loja}}-footer" />
+    <vtex:template id="andre-aragao-footer" />
 
-    <!-- Chamada para os scripts Js da {{loja}} -->
+    <!-- Chamada para os scripts Js da andre-aragao -->
 
-    <vtex:template id="{{loja}}-scripts" />
+    <vtex:template id="andre-aragao-scripts" />
 
 </body>
 
