--- a/src/templates/01 - HTML Templates/andre-aragao-produto.html
+++ b/src/templates/01 - HTML Templates/andre-aragao-produto.html
@@ -6,7 +6,7 @@
 
     <vtex.cmc:seoHead />
     <vtex:metaTags />
-    <vtex:template id="{{loja}}-styles" />
+    <vtex:template id="andre-aragao-styles" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <vtex.cmc:productRichSnippets showFacebook="1" />
 
@@ -16,9 +16,9 @@
 
     <vtex.cmc:productRichSnippets showGoogle="1" />
 
-    <!-- Chamada do cabeçalho da {{loja}} -->
+    <!-- Chamada do cabeçalho da andre-aragao -->
 
-    <vtex:template id="{{loja}}-header" />
+    <vtex:template id="andre-aragao-header" />
 
     <main>
 
@@ -111,7 +111,7 @@
                 <h4 class="prateleira__title"> Titulo prateleira </h4>
             </section>
             <nav class="prateleira__shelve-template">
-                <vtex:contentPlaceHolder id="{{loja}}-prateleira01" />
+                <vtex:contentPlaceHolder id="andre-aragao-prateleira01" />
             </nav>
         </article>
 
@@ -119,11 +119,11 @@
 
     <!-- Chamada para o rodapé -->
 
-    <vtex:template id="{{loja}}-footer" />
+    <vtex:template id="andre-aragao-footer" />
 
-    <!-- Chamada para os scripts Js da {{loja}} -->
+    <!-- Chamada para os scripts Js da andre-aragao -->
 
-    <vtex:template id="{{loja}}-scripts" />
+    <vtex:template id="andre-aragao-scripts" />
 
 </body>
 
