--- a/src/templates/01 - HTML Templates/andre-aragao-sistema-404-500-buscaVazia.html
+++ b/src/templates/01 - HTML Templates/andre-aragao-sistema-404-500-buscaVazia.html
@@ -6,16 +6,16 @@
 
     <vtex.cmc:seoHead />
     <vtex:metaTags />
-    <vtex:template id="{{loja}}-styles" />
+    <vtex:template id="andre-aragao-styles" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
 
 <body>
 
-    <!-- Chamada do cabeçalho da {{loja}} -->
+    <!-- Chamada do cabeçalho da andre-aragao -->
 
-    <vtex:template id="{{loja}}-header" />
+    <vtex:template id="andre-aragao-header" />
 
     <main>
 
@@ -37,11 +37,11 @@
         <article class="container-center page-erro">
 
             <figure class="page-erro__banner">
-                <vtex:contentPlaceHolder id="{{loja}}-banner-erro" />
+                <vtex:contentPlaceHolder id="andre-aragao-banner-erro" />
             </figure>
 
             <h3 class="page-erro__title">
-                <vtex:contentPlaceHolder id="{{loja}}-texto-erro" />
+                <vtex:contentPlaceHolder id="andre-aragao-texto-erro" />
             </h3>
 
             <p class="page-erro__text"> O que acha de realizar uma nova busca? </p>
@@ -66,7 +66,7 @@
                 <h4 class="prateleira__title"> Titulo prateleira </h4>
             </section>
             <nav class="prateleira__shelve-template">
-                <vtex:contentPlaceHolder id="{{loja}}-prateleira01" />
+                <vtex:contentPlaceHolder id="andre-aragao-prateleira01" />
             </nav>
         </article>
 
@@ -75,11 +75,11 @@
 
     <!-- Chamada para o rodapé -->
 
-    <vtex:template id="{{loja}}-footer" />
+    <vtex:template id="andre-aragao-footer" />
 
-    <!-- Chamada para os scripts Js da {{loja}} -->
+    <!-- Chamada para os scripts Js da andre-aragao -->
 
-    <vtex:template id="{{loja}}-scripts" />
+    <vtex:template id="andre-aragao-scripts" />
 
 </body>
 
